--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-    "name": "tailwind-sass-starter",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "build": "cross-env NODE_ENV=production postcss sass/main.scss -o css/styles.css --use-cssnano",
-        "start": "postcss sass/main.scss -o css/styles.css --watch"
-    },
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "autoprefixer": "^10.3.1",
-        "cross-env": "^7.0.3",
-        "cssnano": "^5.0.7",
-        "postcss": "^8.3.6",
-        "postcss-cli": "^8.3.1",
-        "postcss-import": "^14.0.2",
-        "postcss-nesting": "^8.0.1",
-        "tailwindcss": "^2.2.6"
-    }
+  "name": "tailwind-sass-starter",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build": "cross-env NODE_ENV=production postcss sass/main.scss -o css/styles.css --use-cssnano",
+    "start": "postcss sass/main.scss -o css/styles.css --watch"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "autoprefixer": "^10.3.1",
+    "cross-env": "^7.0.3",
+    "cssnano": "^5.0.7",
+    "postcss": "^8.3.6",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.2",
+    "postcss-nesting": "^8.0.1",
+    "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "tailwindcss": "^2.2.6"
+  }
 }
