✨🩹 Refatoracao geral: 	- Reescrita das páginas da home utilizando grid: 		- somos 		- cappice 		- metodo 		- conte

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production postcss sass/main.scss -o css/styles.css --use-cssnano",
-    "start": "postcss assets/sass/main.scss -o assets/css/styles.css --watch"
+    "start": "postcss assets/sass/main.scss -o assets/css/styles.css --watch",
+    "sass": "sass assets/sass/main.scss -o assets/css/style.css --watch"
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +21,8 @@
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "tailwindcss": "^3.3.3"
+  },
+  "dependencies": {
+    "sass": "^1.68.0"
   }
 }
